# periodictable

./: .readthedocs.yaml  ChangeLog.rst  MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: test.yml
doc/sphinx/: conf.py
doc/sphinx/discoverer/: __init__.py  discoverer.py
doc/sphinx/guide/: contributing.rst  data_sources.rst  extending.rst
doc/sphinx/shelltable/: __init__.py
explore/: nubase.py
periodictable/: __init__.py  activation.py  core.py  covalent_radius.py  cromermann.py  crystal_structure.py  density.py  fasta.py  formulas.py  magnetic_ff.py  mass.py  mass_2001.py  nsf.py  nsf_tables.py  util.py  xsf.py
test/: test_activation.py  test_element_types.py
